# hydroV4

./: .dockerignore  .gitignore  ARCHITECTURE_AND_CHANGES.md  AUTONOMOUS_SETUP.md  CAMERA.md  CAMERA_ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.gardener  ENVIRONMENT_VARIABLES_CHANGES.md  README.md  SIMPLE_MJPEG.md  docker-compose.yml  hydro-production.service  hydro.db  mediamtx.yml  next.config.mjs  package-lock.json  package.json  walkthrough.md
.claude/agents/: code-simplifier.md
agents/gardener/: __init__.py  agent.py  app.py  automation_runner.py  cli.py  config.py  hydro_client.py  llm_providers.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  rule_manager.py  tools.py
agents/gardener/data/: automation_rules.json
agents/gardener/tests/: test_hydro_client.py  test_mcp.py  test_tools.py
app/: globals.css  layout.tsx  page.tsx
app/automation/: page.tsx
app/chat/: page.tsx
backend/: README.md  __main__.py  alembic.ini  api.py  cameras.json.example  config.py  database.py  events.py  hydro.db  main.py  metrics.py  models.py  mqtt_client.py  requirements.txt  run_migration.py  test_models.py
backend/migrations/: 001_add_control_mode.sql  env.py  script.py.mako
backend/services/: agent_history.py  camera_capture.py  camera_manager.py  camera_stream.py  camera_sync.py  (+3 more)
components/: actuator-device-grid.tsx  app-header.tsx  camera-feed.tsx  device-toggle.tsx
config/: metric-metadata.json
hooks/: use-actuator-queue.ts  use-cameras.ts  use-ws-metrics-helpers.ts  use-ws-metrics.ts
lib/: metrics.ts
(+5 files in other folders)
