[project]
name = "hydro-gardener"
version = "0.1.0"
description = "AI agent for hydroponics farm management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "mcp>=1.16",
]

[tool.uv]
package = false  # This is an application, not a library

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
